resizing issues fixed by using z-index instead of display:none, fixed 'you died' message when resizing main screen

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,10 +1,13 @@
 #game-board {
+	z-index:2;
 	position:absolute;
 	top:20px;
 	left:20px;
+	display:block;
 }
 #visual-gameboard-div {
 	background-color: #777;
+	z-index:2;
 	position:absolute;
 	top:20px;
 	left:20px;
@@ -77,7 +80,7 @@ div#popup-background {
 }
 
 div.statusDiv {
-	z-index:11;
+	z-index:1;
 	background-color:rgba(119, 119, 119, 0.8);
 	position:absolute;
 	padding: 20px 50px;
